[project]
name = "deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.123.10",
    "groq>=0.33.0",
    "langchain>=1.0.3",
    "langchain-core>=1.0.3",
    "langchain-openai>=1.0.2",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "matplotlib>=3.10.7",
    "mcp>=1.23.1",
    "openai>=2.7.1",
    "playwright>=1.56.0",
    "pygraphviz>=1.14",
    "streamlit>=1.52.1",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchviz>=0.0.3",
    "uvicorn>=0.38.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
